force-app/main/default/objects/clofor_com_cfs__NavigationTabDescriptionTranslation__mdt/fields/clofor_com_cfs__KoreanTranslation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KoreanTranslation__c</fullName>
    <label>Korean Translation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>