force-app/main/default/objects/clofor_com_cfs__NavigationTabDescriptionTranslation__mdt/fields/clofor_com_cfs__NavigationTabName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NavigationTabName__c</fullName>
    <label>Navigation Tab Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>